--- a/photoshare/photoshare/ReferFriendViewController.xib
+++ b/photoshare/photoshare/ReferFriendViewController.xib
@@ -13,7 +13,7 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="1">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <textView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" bounces="NO" editable="NO" text="Choose a toolbox to help refer your friends" id="1RP-d8-cxx">
@@ -37,13 +37,13 @@
                     </connections>
                 </segmentedControl>
                 <webView contentMode="scaleToFill" scalesPageToFit="YES" id="1sJ-lM-kkB">
-                    <rect key="frame" x="0.0" y="200" width="320" height="233"/>
+                    <rect key="frame" x="0.0" y="233" width="320" height="233"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 </webView>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
-            <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
+            <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
         </view>
     </objects>
 </document>
