--- a/photoshare/photoshare/TermConditionViewController.xib
+++ b/photoshare/photoshare/TermConditionViewController.xib
@@ -16,13 +16,13 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Term &amp; Conditions" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="67i-31-5aC">
-                    <rect key="frame" x="70" y="48" width="163" height="36"/>
+                    <rect key="frame" x="79" y="85" width="163" height="36"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="boldSystem" pointSize="19"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <webView contentMode="scaleToFill" id="VD2-Ls-A7Z">
-                    <rect key="frame" x="20" y="93" width="280" height="323"/>
+                    <rect key="frame" x="20" y="103.99999781107078" width="280" height="311"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES" heightSizable="YES"/>
                     <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                 </webView>
